Fix error in header when viewing on smallaer screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,6 +327,7 @@ input[type=submit] {
 
     #title {
         text-align: center;
+        margin-top: 0;
     }
 
     .container {
@@ -420,6 +421,7 @@ input[type=submit] {
 
     #title {
         text-align: center;
+        margin-top: 0;
     }
 
     .container {
